# atmel-sam4lc8ca-usart-template

./: CMakeLists.txt  sam4lc8c_flash.ld
.cache/clangd/index/: conf_clock.h.675C92EB8919BF68.idx  main.c.D8EB511DFC8281CF.idx  startup_sam4l.c.E3F1BA3AA3672818.idx  system_sam4l.c.0E4CE6E470AF9C27.idx
include/: conf_clock.h
src/: main.c
